# src/routes/v1/permissionRouter.ts
@@ -11,22 +11,22 @@ export const router = Router();
  * Get all permissions for user
  * Requires admin authentication for other users
  */
-router.get('/user/:userId', responses.notImplemented);
+router.get('/users/:userId', responses.notImplemented);
 
 /**
  * Get all permissions for user group
  * Requires admin authentication for other users
  */
-router.get('/group/:groupId', responses.notImplemented);
+router.get('/groups/:groupId', responses.notImplemented);
 
 /**
  * Add permissions for user group
  * Requires admin authentication
  */
-router.patch('/group/:groupId', responses.notImplemented);
+router.patch('/groups/:groupId', responses.notImplemented);
 
 /**
  * Delete permissions from user group
  * Requires admin authentication
  */
-router.delete('/group/:groupId', responses.notImplemented);
+router.delete('/groups/:groupId', responses.notImplemented);
